scripts/nullaway/nullgtn/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8.txt
../nullgtn/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8/src/ru/spbau/talanov/sd/drunkard/Inn.java:25: error: [NullAway] parameter simulationState is @NonNull, but parameter in superclass method ru.spbau.talanov.sd.drunkard.Actor.performMove(ru.spbau.talanov.sd.drunkard.SimulationState) is @Nullable
    public void performMove(@NotNull SimulationState simulationState) {
                                                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8/src/ru/spbau/talanov/sd/drunkard/FindPath.java:17: error: [NullAway] parameter position is @NonNull, but parameter in superclass method ru.spbau.talanov.sd.drunkard.FindPath.PositionPredicate.accepts(ru.spbau.talanov.sd.drunkard.Position) is @Nullable
            public boolean accepts(@NotNull Position position) {
                                                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8/src/ru/spbau/talanov/sd/drunkard/MovableObject.java:18: error: [NullAway] parameter position is @NonNull, but parameter in superclass method ru.spbau.talanov.sd.drunkard.Movable.setPosition(ru.spbau.talanov.sd.drunkard.Position) is @Nullable
    public void setPosition(@NotNull Position position) {
                                              ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8/src/ru/spbau/talanov/sd/drunkard/RectangularTopology.java:14: error: [NullAway] parameter position is @NonNull, but parameter in superclass method ru.spbau.talanov.sd.drunkard.BoardTopology.getAdjacentPositions(ru.spbau.talanov.sd.drunkard.Position) is @Nullable
    public List<Position> getAdjacentPositions(@NotNull Position position) {
                                                                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8/src/ru/spbau/talanov/sd/drunkard/Beggar.java:33: error: [NullAway] parameter simulationState is @NonNull, but parameter in superclass method ru.spbau.talanov.sd.drunkard.Actor.performMove(ru.spbau.talanov.sd.drunkard.SimulationState) is @Nullable
    public void performMove(@NotNull SimulationState simulationState) {
                                                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8/src/ru/spbau/talanov/sd/drunkard/Beggar.java:110: error: [NullAway] parameter position is @NonNull, but parameter in superclass method ru.spbau.talanov.sd.drunkard.FindPath.PositionPredicate.accepts(ru.spbau.talanov.sd.drunkard.Position) is @Nullable
            public boolean accepts(@NotNull Position position) {
                                                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8/src/ru/spbau/talanov/sd/drunkard/Beggar.java:121: error: [NullAway] parameter position is @NonNull, but parameter in superclass method ru.spbau.talanov.sd.drunkard.FindPath.PositionPredicate.accepts(ru.spbau.talanov.sd.drunkard.Position) is @Nullable
            public boolean accepts(@NotNull Position position) {
                                                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8/src/ru/spbau/talanov/sd/drunkard/Drunkard.java:46: error: [NullAway] parameter simulationState is @NonNull, but parameter in superclass method ru.spbau.talanov.sd.drunkard.Actor.performMove(ru.spbau.talanov.sd.drunkard.SimulationState) is @Nullable
    public void performMove(@NotNull SimulationState simulationState) {
                                                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8/src/ru/spbau/talanov/sd/drunkard/Policeman.java:37: error: [NullAway] parameter simulationState is @NonNull, but parameter in superclass method ru.spbau.talanov.sd.drunkard.Actor.performMove(ru.spbau.talanov.sd.drunkard.SimulationState) is @Nullable
    public void performMove(@NotNull SimulationState simulationState) {
                                                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8/src/ru/spbau/talanov/sd/drunkard/Policeman.java:109: error: [NullAway] parameter position is @NonNull, but parameter in superclass method ru.spbau.talanov.sd.drunkard.FindPath.PositionPredicate.accepts(ru.spbau.talanov.sd.drunkard.Position) is @Nullable
            public boolean accepts(@NotNull Position position) {
                                                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8/src/ru/spbau/talanov/sd/drunkard/Policeman.java:131: error: [NullAway] parameter position is @NonNull, but parameter in superclass method ru.spbau.talanov.sd.drunkard.FindPath.PositionPredicate.accepts(ru.spbau.talanov.sd.drunkard.Position) is @Nullable
            public boolean accepts(@NotNull Position position) {
                                                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8/src/ru/spbau/talanov/sd/drunkard/HexagonalTopology.java:14: error: [NullAway] parameter position is @NonNull, but parameter in superclass method ru.spbau.talanov.sd.drunkard.BoardTopology.getAdjacentPositions(ru.spbau.talanov.sd.drunkard.Position) is @Nullable
    public List<Position> getAdjacentPositions(@NotNull Position position) {
                                                                 ^
    (see http://t.uber.com/nullaway )
12 errors
